--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -14,6 +14,12 @@
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
             <ul class="nav navbar-nav navbar-right">
+           		<li ui-sref-active="active">
+                    <a ui-sref="mail" ng-click="vm.collapseNavbar()">
+                        <span class="glyphicon glyphicon-envelope"></span>
+                        <span class="hidden-sm">Mail</span>
+                    </a>
+                </li>
                 <li ui-sref-active="active">
                     <a ui-sref="home" ng-click="vm.collapseNavbar()">
                         <span class="glyphicon glyphicon-home"></span>
