--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -78,6 +78,12 @@
                         </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
+                    <li ui-sref-active="active">
+                    <a ui-sref="mail" ng-click="vm.collapseNavbar()">
+                        <span class="glyphicon glyphicon-envelope"></span>
+                        <span class="hidden-sm">Mail</span>
+                    </a>
+                </li>
                 </li>
                 <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
