--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -78,7 +78,7 @@
                         </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
-                    <li ui-sref-active="active">
+                    <li ui-sref-active="active" has-authority="ROLE_ADMIN">
                     <a ui-sref="mail" ng-click="vm.collapseNavbar()">
                         <span class="glyphicon glyphicon-envelope"></span>
                         <span class="hidden-sm">Mail</span>
